Fixed alignment of course navigaton in desktop view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,13 +449,15 @@ nav {
     .outline section div table {
       margin: 2px; }
   @media (min-width: 600px) {
-    .outline aside ul {
-      flex-direction: row;
-      justify-content: space-evenly;
-      margin: 0;
-      padding: 0; }
-      .outline aside ul li a {
-        text-decoration: none; } }
+    .outline aside {
+      padding-top: 40px; }
+      .outline aside ul {
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin: 0;
+        padding: 0; }
+        .outline aside ul li a {
+          text-decoration: none; } }
   @media (min-width: 800px) {
     .outline {
       flex-direction: row; }
